--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,10 @@
 <header class="gradient">
     <h1>PACT</h1>
     <p>Program in Algorithmic and Combinatorial Thinking</p>
+    <div class="more">
+        <p>i.e. Course in Theoretical Computer Science</p>
+        <a href="/overview">Learn More</a>
+    </div>
 </header>
 
 <div>
