--- a/views/application.ejs
+++ b/views/application.ejs
@@ -84,7 +84,7 @@
                     4.&nbsp;Official Transcript
                 </h3>
                 <p>
-                    Guidance counselor must email an official transcript to the email address: summertcs@gmail.com . In the Subject:, please include “Transcript for Applicant Name”. If your school does not email transcripts, please have them mail hard copies to the attention of Prof. Rajiv Gandhi at 322 Business and Science Building, Dept of Computer Science, Rutgers University – Camden, Camden, NJ 08102.
+                    Guidance counselor must email an official transcript to the email address: <a href="mailto:summertcs@gmail.com">summertcs@gmail.com</a>. In the Subject, please include “Transcript for [Applicant Name]”. If your school does not email transcripts, please have them mail hard copies to the attention of Prof. Rajiv Gandhi at 322 Business and Science Building, Dept of Computer Science, Rutgers University – Camden, Camden, NJ 08102.
                 </p>
                 <i class="far fa-newspaper"></i>
             </div>
