--- a/views/logistics.ejs
+++ b/views/logistics.ejs
@@ -22,7 +22,8 @@
             <h2><i class="fas fa-clock"></i></h2>
             <h2>Time</h2>
             
-            <p>Group I students meet in the afternoon, and Group II students meet in the morning. Recitations are in the evening. When in-person, meetings take place each weekday from 9:30am-4:30pm, except on nationally observed holidays.</p>
+            <p>The program will start at 9:30AM EDT.</p>
+            <!-- <p>Group I students meet in the afternoon, and Group II students meet in the morning. Recitations are in the evening. When in-person, meetings take place each weekday from 9:30am-4:30pm, except on nationally observed holidays.</p> -->
         </div>
     </section>
 
