--- a/public/css/partials.css
+++ b/public/css/partials.css
@@ -10,6 +10,7 @@ html, body {
     --white: #eeeeee;
     --grey: #444444;
     --light-grey: #bbbbbb;
+    --lightish-grey: #999999;
     --super-white: #fcfcfc;
     --para: 'Open Sans', sans-serif;
     --h: 'Merriweather', serif;
