--- a/public/css/faq.css
+++ b/public/css/faq.css
@@ -19,7 +19,7 @@
 
 .faq a {
     text-decoration: none;
-    color:var(--light-grey);
+    color: var(--lightish-grey);
     transition: 0.4s;
 }
 
