--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="/css/application.css">
     <link rel="stylesheet" href="/css/students.css">
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/404.css">
 </head>
 <body>
 
