--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,7 @@
     <p>Program in Algorithmic and Combinatorial Thinking</p>
     <div class="more">
         <p>i.e. Course in Theoretical Computer Science</p>
+        <p>We are still accepting applications for Summer 2021!</p>
         <a href="/overview">Learn More</a>
     </div>
 </header>
