--- a/views/application.ejs
+++ b/views/application.ejs
@@ -37,7 +37,7 @@
                     Deadline
                 </h3>
                 <p>
-                    We will be doing rolling admissions, i.e., we will review applications every few weeks. All applications received before <span class="strikethrough">March 5, 2021</span> <span class="strikethrough">March 26, 2021 will receive full consideration.</span> <strong>We are still accepting applications and will continue to accept until all seats are taken.</strong>
+                    We will be doing rolling admissions, i.e., we will review applications every few weeks. <span class="strikethrough">All applications received before March 26, 2021 will receive full consideration. We are still accepting applications and will continue to accept until all seats are taken.</span><br><strong>We are not accepting any more applications for Summer 2021.</strong>
                 </p>
     
             </div>
