add instructors and update /application

--- a/views/application.ejs
+++ b/views/application.ejs
@@ -24,7 +24,7 @@
                     Fees
                 </h3>
                 <p>
-                    The fee for each admitted student is $1500.  We have some financial support available and will try our best to see that admitted students shall not be turned away due to financial constraints (justification required), so we strongly encourage anyone interested in the program to apply.
+                    The fee for each admitted student is $1700.  We have some financial support available and will try our best to see that admitted students shall not be turned away due to financial constraints (justification required), so we strongly encourage anyone interested in the program to apply.
                 </p>
             </div>
 
@@ -37,7 +37,12 @@
                     Deadline
                 </h3>
                 <p>
-                    We will be doing rolling admissions, i.e., we will review applications every few weeks. <span class="strikethrough">All applications received before March 26, 2021 will receive full consideration. We are still accepting applications and will continue to accept until all seats are taken.</span><br><strong>We are not accepting any more applications for Summer 2021.</strong>
+                    We will be doing rolling admissions, i.e., we will review applications every few weeks. 
+                    <!-- <span class="strikethrough"> -->
+                    All applications received before March 11, 2022 will receive full consideration. 
+                    <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
+                    <!-- </span>
+                    <br><strong>We are not accepting any more applications for Summer 2021.</strong> -->
                 </p>
     
             </div>
