update faqs (virtual, fee), guest lecturer details (proper unis), logistics (this year logistics), and overview (add virtual)

--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -44,7 +44,7 @@
         <div>
             <h2>Year-Round</h2>
             <p>
-                During the year, most students from the summer main group eagerly continue to meet every other Saturday on Princeton’s campus. During these sessions, Professor Gandhi gives lectures on specific classes of algorithms including divide and conquer, dynamic programming, network flows, and greedy algorithms. In addition, students learn about NP-completeness and how to make polynomial-time reductions from one decision problem to another. Students begin to explore more of the concepts featured in Algorithm Design by Jon Kleinberg and Éva Tardos.
+                During the year, most students from the summer main group eagerly continue to meet every other weekend either virtually or on Princeton’s campus. During these sessions, Professor Gandhi gives lectures on specific classes of algorithms including divide and conquer, dynamic programming, network flows, and greedy algorithms. In addition, students learn about NP-completeness and how to make polynomial-time reductions from one decision problem to another. Students begin to explore more of the concepts featured in Algorithm Design by Jon Kleinberg and Éva Tardos.
             </p>
         </div>
     </section>
