--- a/views/logistics.ejs
+++ b/views/logistics.ejs
@@ -10,7 +10,7 @@
             <h2><i class="fas fa-calendar-week"></i></h2>
             <h2>Dates</h2>
 
-            <p>The program begins in late June, continuing for six to eight weeks through the summer. The program is expected to run virtually from June 28 until July 30 during the summer of 2021.</p>
+            <p>The program is expected to run from June 27 until July 29 during the summer of 2022.</p>
         </div>
         <div>
             <h2><i class="fas fa-search-location"></i></h2>
