--- a/views/application.ejs
+++ b/views/application.ejs
@@ -24,7 +24,8 @@
                     Fees
                 </h3>
                 <p>
-                    The fee for each admitted student is $1700.  We have some financial support available and will try our best to see that admitted students shall not be turned away due to financial constraints (justification required), so we strongly encourage anyone interested in the program to apply.
+                    The fee for each admitted student is $1700 ($1825 for international students).  We have some financial support available and will try our best to see that admitted students shall not be turned away due to financial constraints (justification required), so we strongly encourage anyone interested in the program to apply.
+                    <!-- fees also mentioned in FAQ -->
                 </p>
             </div>
 
