--- a/views/application.ejs
+++ b/views/application.ejs
@@ -39,11 +39,12 @@
                 </h3>
                 <p>
                     We will be doing rolling admissions, i.e., we will review applications every few weeks. 
-                    <!-- <span class="strikethrough"> -->
-                    All applications received before March 11, 2022 will receive full consideration. 
+                    All applications received before 
+                    <span class="strikethrough">March 11, 2022
                     <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
-                    <!-- </span>
-                    <br><strong>We are not accepting any more applications for Summer 2021.</strong> -->
+                    </span> March 20, 2022
+                    will receive full consideration. 
+                    <!-- <br><strong>We are not accepting any more applications for Summer 2021.</strong> -->
                 </p>
     
             </div>
