--- a/views/application.ejs
+++ b/views/application.ejs
@@ -40,9 +40,7 @@
                 <p>
                     We will be doing rolling admissions, i.e., we will review applications every few weeks. 
                     All applications received before 
-                    <span class="strikethrough">March 11, 2022
-                    <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
-                    </span> March 20, 2022
+                    <span class="strikethrough">March 11, 2022<!-- We are still accepting applications and will continue to accept until all seats are taken. --></span> March 20, 2022
                     will receive full consideration. 
                     <!-- <br><strong>We are not accepting any more applications for Summer 2021.</strong> -->
                 </p>
