--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
     <div class="more">
         <p>i.e. Course in Theoretical Computer Science</p>
         <!-- we are not accepting applications anymore -->
-        <!-- <p>We are still accepting applications for Summer 2021!</p> -->
+        <p>We are still accepting applications for Summer 2022, so please apply soon!</p>
         <a href="/overview">Learn More</a>
     </div>
 </header>
