--- a/views/application.ejs
+++ b/views/application.ejs
@@ -43,7 +43,8 @@
                     <!-- March 11, 2022 -->
                     <!-- We are still accepting applications and will continue to accept until all seats are taken. --> March 20, 2022
                     will receive full consideration.</span>
-                    We are still accepting applications for Summer 2022, so please apply soon.
+                    <br><strong style="font-size: 1.3rem;">
+                    We are still accepting applications for Summer 2022, so please apply soon.</strong>
                     <!-- <br><strong>We are not accepting any more applications for Summer 2021.</strong> -->
                 </p>
     
