make transitions for links less wonky

--- a/public/css/partials.css
+++ b/public/css/partials.css
@@ -68,7 +68,7 @@ nav {
     padding: 10px;
     border-radius: 10px;
 
-    transition: all 0.4s;
+    transition: color 0.4s;
 }
 
 .nav-item > a:hover {
