update deadline stuff

--- a/views/application.ejs
+++ b/views/application.ejs
@@ -8,14 +8,15 @@
     <section class="intro3">
         <div class="first">
             <p class="notapp">
-                The Program in Algorithmic and Combinatorial Thinking is now accepting applications for Summer 2022. The application form can be found at:
+                The Program in Algorithmic and Combinatorial Thinking is not accepting applications for Summer 2022. The application link for Summer 2023 will be released Winter 2022.
+                <!-- The Program in Algorithmic and Combinatorial Thinking is now accepting applications for Summer 2023. The application form can be found at: -->
             </p>
 
-            <p class="app">
+            <!-- <p class="app">
                 <a href="https://applypact.com/apply/5">
                     https://applypact.com/apply/5
                 </a>
-            </p>
+            </p> -->
         </div>
 
         <div class="second">
@@ -39,13 +40,17 @@
                 </h3>
                 <p>
                     We will be doing rolling admissions, i.e., we will review applications every few weeks. 
-                    <span class="strikethrough">All applications received before 
+                    <span class="strikethrough">
+                    <!-- All applications received before  -->
                     <!-- March 11, 2022 -->
-                    <!-- We are still accepting applications and will continue to accept until all seats are taken. --> March 20, 2022
-                    will receive full consideration.</span>
-                    <br><strong style="font-size: 1.3rem;">
-                    We are still accepting applications for Summer 2022, so please apply soon.</strong>
-                    <!-- <br><strong>We are not accepting any more applications for Summer 2021.</strong> -->
+                    <!-- March 20, 2022 -->
+                    <!-- will receive full consideration. -->
+                    <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
+                    <!-- <br> -->
+                    <!-- <strong style="font-size: 1.3rem;"> -->
+                    We are still accepting applications for Summer 2022, so please apply soon.<!-- </strong> --></span> 
+                    <!-- <br> -->
+                    <strong>We are not accepting any more applications for Summer 2022.</strong>
                 </p>
     
             </div>
