--- a/views/instructors.ejs
+++ b/views/instructors.ejs
@@ -19,7 +19,7 @@
                 </p>
             
                 <p>
-                    His research interests are Algorithm Design, Combinatorial Optimization, and Probabilistic methods. He is a passionate educator and has worked with students with varied backgrounds, and he received the Provost’s Award for Teaching Excellence at Rutgers–Camden in 2006.  He received a Fulbright fellowship to teach in Mumbai, India from Jan-May 2011.
+                    His research interests are Algorithm Design, Combinatorial Optimization, and Probabilistic methods. He is a passionate educator and has worked with students with varied backgrounds, and he received the Provost’s Award for Teaching Excellence at Rutgers–Camden in 2006.  He received a Fulbright fellowship to teach in Mumbai, India from Jan-May 2011. Prof. Gandhi has also received the <a href="https://sigact.org/prizes/service/2022.html">2022 ACM-SIGACT Distinguished Service Award</a>.
                 </p>
                 <div class="text1">
                     <p>
