Update new application link

--- a/views/application.ejs
+++ b/views/application.ejs
@@ -8,15 +8,15 @@
     <section class="intro3">
         <div class="first">
             <p class="notapp">
-                The Program in Algorithmic and Combinatorial Thinking is not accepting applications for Summer 2022. The application link for Summer 2023 will be released Winter 2022.
-                <!-- The Program in Algorithmic and Combinatorial Thinking is now accepting applications for Summer 2023. The application form can be found at: -->
+               <!--  The Program in Algorithmic and Combinatorial Thinking is not accepting applications for Summer 2022. The application link for Summer 2023 will be released Winter 2022. -->
+                The Program in Algorithmic and Combinatorial Thinking is now accepting applications for Summer 2023. The application form can be found at: 
             </p>
 
-            <!-- <p class="app">
+            <p class="app">
                 <a href="https://applypact.com/apply/6">
                     https://applypact.com/apply/6
                 </a>
-            </p> -->
+            </p> 
         </div>
 
         <div class="second">
@@ -25,7 +25,7 @@
                     Fees
                 </h3>
                 <p>
-                    The fee for each admitted student is $1700 ($1825 for international students).  We have some financial support available and will try our best to see that admitted students shall not be turned away due to financial constraints (justification required), so we strongly encourage anyone interested in the program to apply.
+                    The fee for each admitted student is $1850 ($1950 for international students).  We have some financial support available and will try our best to see that admitted students shall not be turned away due to financial constraints (justification required), so we strongly encourage anyone interested in the program to apply.
                     <!-- fees also mentioned in FAQ -->
                 </p>
             </div>
@@ -40,17 +40,17 @@
                 </h3>
                 <p>
                     We will be doing rolling admissions, i.e., we will review applications every few weeks. 
-                    <span class="strikethrough">
-                    <!-- All applications received before  -->
-                    <!-- March 11, 2022 -->
-                    <!-- March 20, 2022 -->
-                    <!-- will receive full consideration. -->
+                  <!--  <span class="strikethrough"> -->
+                    All applications received before 
+                    March 10, 2023 
+                    <!-- March 20, 2023 -->
+                    will receive full consideration. 
                     <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
                     <!-- <br> -->
                     <!-- <strong style="font-size: 1.3rem;"> -->
-                    We are still accepting applications for Summer 2022, so please apply soon.<!-- </strong> --></span> 
+                   <!-- We are still accepting applications for Summer 2022, so please apply soon.<!-- </strong> --></span> -->
                     <!-- <br> -->
-                    <strong>We are not accepting any more applications for Summer 2022.</strong>
+                   <!-- <strong>We are not accepting any more applications for Summer 2022.</strong> -->
                 </p>
     
             </div>
