--- a/views/application.ejs
+++ b/views/application.ejs
@@ -48,7 +48,7 @@
                     <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
                     <!-- <br> -->
                     <!-- <strong style="font-size: 1.3rem;"> -->
-                   <!-- We are still accepting applications for Summer 2022, so please apply soon.<!-- </strong> --></span> -->
+                   <!-- We are still accepting applications for Summer 2022, so please apply soon. </strong> </span> -->
                     <!-- <br> -->
                    <!-- <strong>We are not accepting any more applications for Summer 2022.</strong> -->
                 </p>
