--- a/views/logistics.ejs
+++ b/views/logistics.ejs
@@ -10,13 +10,13 @@
             <h2><i class="fas fa-calendar-week"></i></h2>
             <h2>Dates</h2>
 
-            <p>The program is expected to run from June 27 until July 29 during the summer of 2022.</p>
+            <p>The program is expected to run from June 26 until July 28 during the summer of 2023.</p>
         </div>
         <div>
             <h2><i class="fas fa-search-location"></i></h2>
             <h2>Location</h2>
             
-            <p>PACT will be taking place virtually this year, as it did last year. Platforms used are Zoom, Gradescope, and Discord. When in-person, the program usually runs on the Princeton University campus.</p>
+            <p>PACT will surely have a virtual component this year, as it did last year. Platforms used are Zoom, Gradescope, and Discord. We are also trying to have an in-person component in 2023. The in-person component, if we have one, will mostly run on the Princeton University campus.</p>
         </div>
         <div>
             <h2><i class="fas fa-clock"></i></h2>
