--- a/views/application.ejs
+++ b/views/application.ejs
@@ -20,38 +20,44 @@
         </div>
 
         <div class="second">
-            <div>
+            <div class="intro-contain">
                 <h3>
                     Fees
                 </h3>
-                <p>
-                    The fee for each admitted student is $1850 ($1950 for international students).  We have some financial support available and will try our best to see that admitted students shall not be turned away due to financial constraints (justification required), so we strongly encourage anyone interested in the program to apply.
-                    <!-- fees also mentioned in FAQ -->
-                </p>
+                <div>
+                    <ul>
+                        <li>Virtual fees: The fee for each admitted student is $1850 ($1950 for international students). </li>
+                        <li>In-person (if we are able to offer): Tuition will be decided once we get a confirmation.</li>
+                    </ul>
+                    <p>We have some financial support available and will try our best to see that admitted students shall not be turned away due to financial constraints (justification required), so we strongly encourage anyone interested in the program to apply.
+                    <!-- fees also mentioned in FAQ --></p>
+                </div>
             </div>
 
         </div>
 
         <div class="third">
-            <div>
+            <div class="intro-contain">
 
                 <h3>
                     Deadline
                 </h3>
-                <p>
-                    We will be doing rolling admissions, i.e., we will review applications every few weeks. 
-                  <!--  <span class="strikethrough"> -->
-                    All applications received before 
-                    March 10, 2023 
-                    <!-- March 20, 2023 -->
-                    will receive full consideration. 
-                    <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
-                    <!-- <br> -->
-                    <!-- <strong style="font-size: 1.3rem;"> -->
-                   <!-- We are still accepting applications for Summer 2022, so please apply soon. </strong> </span> -->
-                    <!-- <br> -->
-                   <!-- <strong>We are not accepting any more applications for Summer 2022.</strong> -->
-                </p>
+                <div>
+                    <p>
+                        We will be doing rolling admissions, i.e., we will review applications every few weeks. 
+                      <!--  <span class="strikethrough"> -->
+                        All applications received before 
+                        March 10, 2023 
+                        <!-- March 20, 2023 -->
+                        will receive full consideration. 
+                        <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
+                        <!-- <br> -->
+                        <!-- <strong style="font-size: 1.3rem;"> -->
+                       <!-- We are still accepting applications for Summer 2022, so please apply soon. </strong> </span> -->
+                        <!-- <br> -->
+                       <!-- <strong>We are not accepting any more applications for Summer 2022.</strong> -->
+                    </p>
+                </div>
     
             </div>
         </div>
