--- a/public/css/overview.css
+++ b/public/css/overview.css
@@ -25,7 +25,7 @@
     color: var(--black);
 }
 
-.group-i, .year-round, .group-ii {
+.group-i, .year-round, .group-ii, .asia {
     display: flex;
     justify-content: center;
 
@@ -55,7 +55,12 @@
     background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), var(--trans-blue) 350px), url('/img/overview/group_ii.jpg');
 }
 
-.group-i > div, .year-round > div, .group-ii > div {
+.asia {
+    background-image: url("/img/overview/group_i.jpg");
+    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), var(--trans-blue) 350px), url('/img/overview/asia.png');
+}
+
+.group-i > div, .year-round > div, .group-ii > div, .asia > div {
     margin-top: 300px;
 }
 
