--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -16,7 +16,7 @@
         </p>
 
         <p>
-            During some years, there is an advanced group consisting of incoming graduate students with significant experience in the field. Starting 2023, students in Asia may also participate in the PACT Asia program which will be offered at a time that works well for students in Asian time zones. 
+            During some years, there is an advanced group consisting of incoming graduate students with significant experience in the field. <br> <br> Starting 2023, students in Asia may also participate in the PACT Asia program which will be offered at a time that works well for students in Asian time zones. 
         </p>
     </section>
     
