update faq prices

--- a/views/application.ejs
+++ b/views/application.ejs
@@ -26,7 +26,8 @@
                 </h3>
                 <div>
                     <ul>
-                        <li>Virtual fees: The fee for each admitted student is $1850 ($1950 for international students). </li>
+                        <li>Virtual fees: The fee for each admitted student is $1850 ($1950 for international students). </li> 
+                        <!-- ^^ also on FAQ page!!! -->
                         <li>In-person (if we are able to offer): Tuition will be decided once we get a confirmation.</li>
                     </ul>
                     <p>We have some financial support available and will try our best to see that admitted students shall not be turned away due to financial constraints (justification required), so we strongly encourage anyone interested in the program to apply.
