--- a/views/application.ejs
+++ b/views/application.ejs
@@ -46,10 +46,11 @@
                 <div>
                     <p>
                         We will be doing rolling admissions, i.e., we will review applications every few weeks. 
-                      <!--  <span class="strikethrough"> -->
+                      
                         All applications received before 
-                        March 10, 2023 
-                        <!-- March 20, 2023 -->
+                        <span class="strikethrough">
+                        March 10, 2023</span>
+                        March 24, 2023
                         will receive full consideration. 
                         <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
                         <!-- <br> -->
