still accepting apps !

--- a/views/application.ejs
+++ b/views/application.ejs
@@ -47,15 +47,15 @@
                     <p>
                         We will be doing rolling admissions, i.e., we will review applications every few weeks. 
                       
-                        All applications received before 
                         <span class="strikethrough">
+                        All applications received before 
                         March 10, 2023</span>
-                        March 24, 2023
-                        will receive full consideration. 
+                        <span class="strikethrough">March 24, 2023
+                        will receive full consideration. </span>
                         <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
-                        <!-- <br> -->
-                        <!-- <strong style="font-size: 1.3rem;"> -->
-                       <!-- We are still accepting applications for Summer 2022, so please apply soon. </strong> </span> -->
+                        <br>
+                        <strong style="font-size: 1.3rem;">
+                       We are still accepting applications for Summer 2022, so please apply soon. </strong>
                         <!-- <br> -->
                        <!-- <strong>We are not accepting any more applications for Summer 2022.</strong> -->
                     </p>
