--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
     <div class="more">
         <p>i.e. Course in Theoretical Computer Science</p>
         <!-- we are not accepting applications anymore -->
-        <!-- <p><strong style="font-size: 1.5rem; background-color: rgba(48, 1, 255, 0.384); padding: 5px;">We are still accepting applications for Summer 2022, so please <a href="/application">apply</a> soon!</strong></p> -->
+        <p><strong style="font-size: 1.5rem; background-color: rgba(48, 1, 255, 0.384); padding: 5px;">We are still accepting applications for Summer 2022, so please <a href="/application">apply</a> soon!</strong></p>
         <a class="btn-home" href="/overview">Learn More</a>
     </div>
 </header>
