--- a/views/application.ejs
+++ b/views/application.ejs
@@ -8,15 +8,15 @@
     <section class="intro3">
         <div class="first">
             <p class="notapp">
-               <!--  The Program in Algorithmic and Combinatorial Thinking is not accepting applications for Summer 2022. The application link for Summer 2023 will be released Winter 2022. -->
-                The Program in Algorithmic and Combinatorial Thinking is now accepting applications for Summer 2023. The application form can be found at: 
+                The Program in Algorithmic and Combinatorial Thinking is not accepting applications for Summer 2023. The application link for Summer 2024 will be released Winter 2023.
+                <!-- The Program in Algorithmic and Combinatorial Thinking is now accepting applications for Summer 2023. The application form can be found at:  -->
             </p>
 
-            <p class="app">
+            <!-- <p class="app">
                 <a href="https://applypact.com/apply/6">
                     https://applypact.com/apply/6
                 </a>
-            </p> 
+            </p>  -->
         </div>
 
         <div class="second">
@@ -26,7 +26,7 @@
                 </h3>
                 <div>
                     <ul>
-                        <li>Virtual fees: The fee for each admitted student is $1850 ($1950 for international students). </li> 
+                        <li>Virtual fees: The fee for each admitted student is \$1850 (\$1950 for international students). </li> 
                         <!-- ^^ also on FAQ page!!! -->
                         <li>In-person (if we are able to offer): Tuition will be decided once we get a confirmation.</li>
                     </ul>
@@ -45,7 +45,7 @@
                 </h3>
                 <div>
                     <p>
-                        We will be doing rolling admissions, i.e., we will review applications every few weeks. 
+                        <!-- We will be doing rolling admissions, i.e., we will review applications every few weeks.  -->
                       
                         <!-- <span class="strikethrough">
                         All applications received before 
@@ -53,11 +53,11 @@
                         <span class="strikethrough">March 24, 2023
                         will receive full consideration. </span> -->
                         <!-- We are still accepting applications and will continue to accept until all seats are taken. -->
-                        <br>
+                        <!-- <br>
                         <strong style="font-size: 1.3rem;">
-                       We are still accepting applications for Summer 2023, so please apply soon. </strong>
+                       We are still accepting applications for Summer 2023, so please apply soon. </strong> -->
                         <!-- <br> -->
-                       <!-- <strong>We are not accepting any more applications for Summer 2022.</strong> -->
+                       <strong>We are not accepting any more applications for Summer 2023.</strong>
                     </p>
                 </div>
     
